Fix overflow-y of container-main with scroller shrink on Firefox

--- a/less/bootstrap-theme/wrapper.less
+++ b/less/bootstrap-theme/wrapper.less
@@ -59,7 +59,7 @@ html.scroller-shrink {
 
         > .container-main {
             height: auto;
-            overflow-y: auto;
+            overflow-y: initial;
             -webkit-overflow-scrolling: auto;
         }
     }
